k8s/apps/fraternity/frat-dump/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frat-dump
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      component: frat-dump
  template:
    metadata:
      labels:
        component: frat-dump
    spec:
      containers:
        - name: app
          image: systemfraternity/frat_dump
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          volumeMounts:
            - mountPath: /app/media/dumps
              name: media-volume
      securityContext:
        fsGroup: 2000
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - frat-dump
                    - key: component
                      operator: In
                      values:
                        - frat-dump
                topologyKey: kubernetes.io/hostname
      volumes:
        - name: media-volume
          persistentVolumeClaim:
            claimName: frat-dump-pvc-media
