k8s/apps/fraternity/frat-dump/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: frat-dump
spec:
  type: ClusterIP
  selector:
    component: frat-dump
  ports:
    - name: http
      port: 8000
      targetPort: http
